@@ -12,6 +12,8 @@
 
 	Taught ga/gA commands to handle selection.  Thanks to geo909.
 
+	More accurate scheduling of view updates
+
 	Fixed extension extraction for column view (wasn't consistent with
 	filename modifiers).  Thanks to ranousse.
 
